Fix command parsing, correct SET/EX handling, and make InMemoryStore expiry operations thread-safe and atomic